[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[tool.black]
skip-string-normalization = false
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
known_third_party = ["pytest"]

[tool.darker]
src = [
    "release_tools",
    "src",
    "setup.py",
]
revision = "origin/main..."
isort = true

[tool.graylint]
src = [
    "release_tools",
    "src",
    "setup.py",
]
revision = "origin/main..."
lint = [
    "flake8",
    "mypy",
    "pydocstyle",
    "pylint",
    "ruff check",
]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "COM812",  # Trailing comma missing
    "D203",  # One blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "D400",  # First line should end with a period (duplicates D415)
]

[tool.ruff.lint.per-file-ignores]
"src/darkgraylib/tests/*.py" = [
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
    "ANN204",  # Missing return type annotation for special method `__init__`
    "INP001",  # File is part of an implicit namespace package. Add an `__init__.py`.
    "C408",  # Unnecessary `dict` call (rewrite as a literal)
    "S101",  # Use of `assert` detected
]
