[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=67.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darkgraylib"
version = "2.4.0"  # Will be dynamic after full migration
authors = [{name = "Antti Kaihola", email = "13725+akaihola@users.noreply.github.com"}]
license = {text = "BSD-3-Clause"}
description = "Common supporting code for Darker and Graylint"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "toml>=0.10.0",
]
dynamic = ["readme"]

[tool.setuptools.package-data]
darkgraylib = ["py.typed"]

[project.urls]
Homepage = "https://github.com/akaihola/darkgraylib"
"Source Code" = "https://github.com/akaihola/darkgraylib"
"Change Log" = "https://github.com/akaihola/darkgraylib/blob/main/CHANGES.rst"
News = "https://github.com/akaihola/darkgraylib/discussions/categories/announcements"

[project.optional-dependencies]
color = ["Pygments>=2.4.0"]

[dependency-groups]
dev = [
    "click>=8.0.0",
    "cryptography>=3.3.2",  # through twine, fixes CVE-2020-36242
    "darkgray-dev-tools @ git+https://github.com/akaihola/darkgray-dev-tools",
    "defusedxml>=0.7.1",
    "flake8",
    "mypy",
    "Pygments>=2.4.0",
    "pydocstyle",
    "pylint>=3.3.0",
    "pytest>=6.2.0",
    "pytest-kwparametrize>=0.0.3",
    "requests_cache>=0.7",
    "ruamel.yaml>=0.17.21",
    "ruff>=0.0.292",
    "twine>=2.0.0",
    "types-requests>=2.27.9",
    "types-toml>=0.10.4",
    "urllib3>=1.25.9",  # through requests-cache and twine, fixes CVE-2020-26137
    "wheel>=0.21.0",
]

[project.entry-points."pygments.lexers"]
lint_location = "darkgraylib.highlighting.lexers:LocationLexer"
lint_description = "darkgraylib.highlighting.lexers:DescriptionLexer"

[project.entry-points."pytest11"]
pytest_git_repo = "darkgraylib.testtools.git_repo_plugin"
pytest_clear_black_cache = "darkgraylib.testtools.clear_black_cache_plugin"
pytest_temp_copy = "darkgraylib.testtools.temp_copy"
pytest_patching = "darkgraylib.testtools.patching"

[tool.black]
skip-string-normalization = false
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
known_third_party = ["pytest"]

[tool.darker]
src = [
    "src",
    "setup.py",
]
revision = "origin/main..."

[tool.graylint]
src = [
    "src",
    "setup.py",
]
revision = "origin/main..."

[tool.pylint."messages control"]
disable = ["line-too-long"]  # checked by Ruff

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Trailing comma missing
    "D203",  # One blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "D400",  # First line should end with a period (duplicates D415)
]

[tool.ruff.lint.per-file-ignores]
"src/darkgraylib/tests/*.py" = [
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
    "ANN204",  # Missing return type annotation for special method `__init__`
    "INP001",  # File is part of an implicit namespace package. Add an `__init__.py`.
    "C408",  # Unnecessary `dict` call (rewrite as a literal)
    "S101",  # Use of `assert` detected
]
